# video-sort-gui

./: .gitignore  Cargo.toml  tmpl_sort_categories.txt
examples/: gif.rs  mini.rs  minimal.rs  player.rs  view_generics.rs  webp.rs
src/: data.rs  file_handling.rs  lib.rs  main.rs  widget.rs
src/widget/: player.rs
