[package]
name = "video_sort_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.13.1"
iced_gif = { git = "https://github.com/tarkah/iced_gif.git", version = "0.13.0" }
iced_video_player = { git = "https://github.com/jazzfool/iced_video_player.git", version = "0.6.0" }
iced_webp = { git = "https://github.com/roguecat0/iced_webp.git", version = "0.13.0" }
url = "2.5.4"
